<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Classify">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.InfoFarm"
        android:background="#B4FC88"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#B4FC88"
            app:title="@string/app_name"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/Theme.InfoFarm"
            app:collapsedTitleTextAppearance="@style/Theme.InfoFarm"
            android:background="@drawable/pl"
            android:id="@+id/collapsing_toolbar">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_margin="50dp"
                android:layout_gravity="center|end"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/remedies"
        android:layout_marginBottom="65dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">
                <Button
                    android:id="@+id/btn_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:text="@string/tagalog"
                    app:layout_constraintBottom_toTopOf="@id/pest_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/pest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hello"
                    android:textColor="@color/green_500"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_tagalog" />
                <TextView
                    android:id="@+id/seemore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seemore"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pest_name" />
                <TextView
                    android:id="@+id/pest_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/teal_800"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seemore" />
                <TextView
                    android:id="@+id/control_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/control"
                    android:textColor="@color/green_500"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pest_description"
                    />
                <TextView
                    android:id="@+id/pest_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/control_content"
                    android:textColor="@color/teal_800"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/control_heading" />

                <TextView
                    android:id="@+id/chemical_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chemical"
                    android:textColor="@color/green_500"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pest_control"
                    />
                <TextView
                    android:id="@+id/pest_chemical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chemical_content"
                    android:textColor="@color/teal_800"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chemical_heading" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tagalog"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">
                <Button
                    android:id="@+id/btn_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:text="@string/english"
                    app:layout_constraintBottom_toTopOf="@id/pest_name_tagalog"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/pest_name_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hello_tagalog"
                    android:textColor="@color/green_500"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_english" />
                <TextView
                    android:id="@+id/seemoreTagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seemoreTagalog"
                    android:textColor="@color/black_900"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pest_name_tagalog" />
                <TextView
                    android:id="@+id/pest_description_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_tagalog"
                    android:textColor="@color/teal_800"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seemoreTagalog" />
                <TextView
                    android:id="@+id/control_heading_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/control_tagalog"
                    android:textColor="@color/green_500"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pest_description_tagalog"
                    />
                <TextView
                    android:id="@+id/pest_control_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/control_content_tagalog"
                    android:textColor="@color/teal_800"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/control_heading_tagalog" />

                <TextView
                    android:id="@+id/chemical_heading_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chemical_tagalog"
                    android:textColor="@color/green_500"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pest_control_tagalog"
                    />
                <TextView
                    android:id="@+id/pest_chemical_tagalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chemical_content_tagalog"
                    android:textColor="@color/teal_800"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chemical_heading_tagalog" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="10dp"
        >

        <Button
            android:id="@+id/btn_capture_image"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fitsSystemWindows="true"
            android:text="@string/take_image"
            android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
            />

        <Button
            android:id="@+id/btn_load_image"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:fitsSystemWindows="true"
            android:text="@string/load_image"
            android:drawableLeft="@drawable/ic_baseline_folder_24"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>